--- a/README
+++ b/README
@@ -7,3 +7,6 @@ Octolively is an open source hardware+software project.
 
 Octolively documentation is hosted at:
 http://wiki.evilmadscience.com/Octolively
+
+To request commit access, please use the contact form at:
+http://www.evilmadscientist.com/staticpages/index.php/contact
