--- a/README
+++ b/README
@@ -1,17 +1,18 @@
-Octolively modules are interactive LED surfaces by Evil Mad Science, http://evilmadscience.com/
+Octolively modules are interactive LED surfaces by Evil Mad Scientist Laboratories, 
+http://www.evilmadscientist.com/
 
 
 Octolively is an open source hardware+software project.
 
 The main branch of the firmware is for Octolively modules, whose product page is here: 
-http://evilmadscience.com/productsmenu/tinykitlist/411
+http://shop.evilmadscientist.com/productsmenu/tinykitlist/556
 
 A separate branch is for the Interactive Game of Life kit, based on the Octolively hardware:
-http://evilmadscience.com/productsmenu/tinykitlist/477
+http://shop.evilmadscientist.com/productsmenu/tinykitlist/477
 
 
 Octolively documentation is hosted at:
-http://wiki.evilmadscience.com/Octolively
+http://wiki.evilmadscientist.com/Octolively
 
 To request commit access, please use the contact form at:
 http://www.evilmadscientist.com/staticpages/index.php/contact
